<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">pomyslNa</string>
    <string name="hello_msg">Dodaj swój pomysł na..</string>
    <string name="menu_msg">Co chcesz teraz zrobić?</string>
    <string name="user">login</string>
    <string name="lastRec">Najnowsze przepisy</string>
    <string name="myRec">Moje przepisy</string>
    <string name="addRec">Dodaj przepis</string>
    <string name="delRec">Usuń przepis</string>
    <string name="ulRec">Ulubione</string>
    <string name="pass">hasło</string>
    <string name="loguj">Zaloguj</string>
    <string name="dodaj">Dodaj przepis</string>
    <string name="ulubione">Ulubione</string>
    <string name="usun">Usuń</string>
    <string name="przepisy">Czytaj przepisy</string>
    <string name="action_settings">Settings</string>
    <string name="logerror">Wprowadzono za krótki login lub hasło</string>
</resources>
