<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    >
<TextView
    android:id="@+id/txtMenu"
    android:text="@string/menu_msg"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"/>
<Button
    android:id="@+id/btnLastRec"
    android:layout_below="@+id/txtMenu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/lastRec"/>
    <Button
        android:id="@+id/btnUlRec"
        android:layout_below="@+id/btnLastRec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ulRec"
        android:layout_marginTop="15dp"/>
    <Button
        android:id="@+id/btnMyRec"
        android:layout_below="@+id/btnUlRec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/myRec"
        android:layout_marginTop="15dp"/>
    <Button
        android:id="@+id/btnAdd"
        android:layout_below="@+id/btnMyRec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addRec"
        android:layout_marginTop="15dp"/>
    <Button
        android:id="@+id/btnDel"
        android:layout_below="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delRec"
        android:layout_marginTop="15dp"/>
</RelativeLayout>
