<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#666666"
    >

<TextView
    android:id="@+id/powitanie"
    android:text="@string/hello_msg"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/btnDodaj"
        android:layout_below="@+id/powitanie"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/dodaj"
        android:background="#009999"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/btnUlubione"
        android:layout_below="@+id/powitanie"
        android:layout_toRightOf="@+id/btnDodaj"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/ulubione"
        android:background="#009999"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/btnPrzepisy"
        android:layout_below="@+id/btnDodaj"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/przepisy"
        android:background="#009999"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"/>
    <Button
    android:id="@+id/btnUsun"
    android:layout_below="@+id/btnUlubione"
    android:layout_toRightOf="@+id/btnPrzepisy"
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:text="@string/usun"
    android:background="#009999"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp"/>

</RelativeLayout>
