<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    >

<TextView
    android:id="@+id/powitanie"
    android:text="@string/hello_msg"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"/>
<EditText
    android:id="@+id/log"
    android:layout_below="@+id/powitanie"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:singleLine="true"
    android:hint="@string/user"
    android:inputType="textEmailAddress"
    android:layout_marginTop="55dp"/>
<EditText
    android:id="@+id/haslo"
    android:layout_below="@+id/log"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:singleLine="true"
    android:hint="@string/pass"
    android:inputType="textPassword"
    android:layout_marginTop="25dp"/>
<Button
    android:id="@+id/btnLoguj"
    android:layout_below="@+id/haslo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/loguj"
    android:background="#009999"
    android:layout_marginTop="20dp"/>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/btnLoguj"
    android:id="@+id/txtRoz"
    android:text="albo"
    android:textSize="25dp"
    android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnRejestruj"
        android:layout_below="@+id/txtRoz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Zarejestruj"
        android:background="#009999"
        android:layout_marginTop="20dp"/>
</RelativeLayout>
